--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-test edit in local
-本地测试2：
-1.echo "test edit in local" > index.html；
-这句话的意思即是：输出test edit in local字符串到一个位置index.html；
-如果index.html存在，我们即【清空其内容，更新为Hello,Binn】，不存在，创建之；
-2.git add --all
-添加当前目录下所有文件到暂存区；
-3.git commit -m "local test 2"
-提取暂存区到仓库区
-4.git push -u origin master
-将本地的master分支推送到origin主机，并将origin主机设为默认主机；
-若再需要给origin推送则可直接 git push；
+<h2>test edit in local</h2>
+<ul>
+<li>本地测试2：</li>
+
+</ul>
+<ol>
+<li><p>echo &quot;test edit in local&quot; &gt; index.html；</p>
+<p>这句话的意思即是：输出test edit in local字符串到一个位置index.html；</p>
+<p>如果index.html存在，我们即【清空其内容，更新为Hello,Binn】，不存在，创建之；</p>
+</li>
+<li><p>git add --all</p>
+<p>添加当前目录下所有文件到暂存区；</p>
+</li>
+<li><p>git commit -m &quot;local test 2&quot;</p>
+<p>提取暂存区到仓库区</p>
+</li>
+<li><p>git push -u origin master</p>
+<p>将本地的master分支推送到origin主机，并将origin主机设为默认主机；</p>
+<p>若再需要给origin推送则可直接 git push；</p>
+</li>
+
+</ol>
